traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-proxy-send-timeout.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-proxy-timeout
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
